# parsifal

./: LICENSE  README.md  pyproject.toml
src/parsifal/: __init__.py  cli.py  engine.py  test_engine.py
