[project]
name = "parsifal"
version = "0.1.0"
description = "A deterministic, tag-based dynamic text generation engine."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
parsifal = "parsifal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]